added fitur ouath google

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <!-- SIGN IN PAKAI GOOGLE -->
+    <div class="mt-6 g-signin2" data-onsuccess="onSignIn"></div>
 </body>
 
 </html>
